# faktoro-sync-server

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  database.dbdiagram  database.dbml  docker-compose.yml  openapi.yaml
.github/workflows/: docker-publish.yml
migrations/: 0001_init.sql  0002_online_records_source_device.sql  0003_online_records_source_device_set_null.sql  0004_hash_auth_tokens.sql  0005_instance_recovery_bootstraps.sql
src/: app_state.rs  auth.rs  crypto.rs  error.rs  mailer.rs  main.rs  payloads.rs
src/handlers/: crypto_keys.rs  devices.rs  meta.rs  mod.rs  pairing.rs  sync.rs  sync_events.rs  sync_events_ws.rs
static/docs/: index.html
